--- a/Round2/Manuscript/Permuting_Accuracy.bib
+++ b/Round2/Manuscript/Permuting_Accuracy.bib
@@ -501,27 +501,13 @@ Supplementary Information: A complete compilation of results and R code for simu
   keywords = {Mathematics / Probability \& Statistics / General,Mathematics / Probability \& Statistics / General,Psychology / Research \& Methodology,Psychology / Research \& Methodology}
 }
 
+
 @book{hastie_elements_2003,
-  title = {The {{Elements}} of {{Statistical Learning}}},
-  isbn = {0-387-95284-5},
-  abstract = {During the past decade there has been an explosion in computation and information technology. With it has come vast amounts of data in a variety of fields such as medicine, biology, finance, and marketing. The challenge of understanding these data has led to the development of new tools in the field of statistics, and spawned new areas such as data mining, machine learning, and bioinformatics.
-
-Many of these tools have common underpinnings but are often expressed with different terminology. This book describes the important ideas in these areas in a common conceptual framework. While the approach is statistical, the emphasis is on concepts rather than mathematics. Many examples are given, with a liberal use of color graphics. It should be a valuable resource for statisticians and anyone interested in data mining in science or industry.
-
-The book's coverage is broad, from supervised learning (prediction) to unsupervised learning. The many topics include neural networks, support vector machines, classification trees and boosting--the first comprehensive treatment of this topic in any book.
-
-Trevor Hastie, Robert Tibshirani, and Jerome Friedman are professors of statistics at Stanford University. They are prominent researchers in this area: Hastie and Tibshirani developed generalized additive models and wrote a popular book of that title. Hastie wrote much of the statistical modeling software in S-PLUS and invented principal curves and surfaces. Tibshirani proposed the Lasso and is co-author of the very successful An Introduction to the Bootstrap. Friedman is the co-inventor of many data-mining tools including CART, MARS, and projection pursuit.
-
-FROM THE REVIEWS:
-
-TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on explaining why and how the methods work, rather than how to use them. Examples and especially the visualizations are principle features...As a source for the methods of statistical learning...it will probably be a long time before there is a competitor to this book."},
-  timestamp = {2016-05-17T05:02:03Z},
-  urldate = {2014-12-11},
-  publisher = {{Springer}},
-  author = {Hastie, T and Tibshirani, R and Friedman, JH},
-  month = jul,
-  year = {2003},
-  keywords = {machine-learning,machine-learning,statistic,statistic}
+	title={The elements of statistical learning},
+	author={Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
+	volume={1},
+	year={2001},
+	publisher={Springer series in statistics New York}
 }
 
 @article{ojala_permutation_2010,
@@ -1395,3 +1381,13 @@ Contact: tongt@hkbu.edu.hk},
 }
 
 
+@article{goeman2006testing,
+	title={Testing against a high dimensional alternative},
+	author={Goeman, Jelle J and Van De Geer, Sara A and Van Houwelingen, Hans C},
+	journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+	volume={68},
+	number={3},
+	pages={477--493},
+	year={2006},
+	publisher={Wiley Online Library}
+}
